lab9/tests/invalid/wrongOldPrice.js
module.exports = {
    "category_id": "10",
    "title": "watches",
    "content": "New content",
    "price": "100",
    "old_price": "text",
    "status": "0",
    "keywords": "New keywords",
    "description": "New description",
    "hit": "0"
}